save dependencies and remove html5 video tag

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Caster</title>
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/master.css">
   </head>
   <body>
-    <h1>Caster</h1>
+    <aside>
+      Caster
+    </aside>
+    <main>
+      <header>
+      </header>
+      <footer>
+      </footer>
+    </main>
   </body>
 </html>
